Ref Schema Added

--- a/modules/articles/client/views/edit-article.client.view.html
+++ b/modules/articles/client/views/edit-article.client.view.html
@@ -12,6 +12,12 @@
           </div>
         </div>
         <div class="form-group">
+          <label class="control-label" for="title">Category</label>
+          <div class="controls">
+            <input name="category" type="text" data-ng-model="article.category" id="category" class="form-control" placeholder="Category">
+          </div>
+        </div>
+        <div class="form-group">
           <label class="control-label" for="content">Content</label>
           <div class="controls">
             <textarea name="content" data-ng-model="article.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
