--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -17,6 +17,12 @@
       by
       <span data-ng-bind="article.user.displayName"></span>
     </em>
+    <p>
+      <em class="text-muted">
+        Category:
+        <span data-ng-bind="article.category"></span>
+      </em>
+    </p>
   </small>
   <p class="lead" data-ng-bind="article.content"></p>
 </section>
