--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -9,9 +9,18 @@
         <span data-ng-bind="article.created | date:'mediumDate'"></span>
         by
         <span data-ng-bind="article.user.displayName"></span>
+        <p>
+          Category:
+          <em class="text-muted">
+            <span data-ng-bind="article.category"></span>
+          </em>
+        </p>
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="article.title"></h4>
       <p class="list-group-item-text" data-ng-bind="article.content"></p>
+      <small class="list-group-item-text">
+
+      </small>
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="articles.$resolved && !articles.length">
